# Library-Book-Borrowing-Management-System

./: CMakeLists.txt  README.md
cpp/include/: Book.h  Console.h  Functions.h  History.h  Library.h  Menu.h  Reader.h
cpp/src/: Book.cpp  Console.cpp  Functions.cpp  History.cpp  LIbrary_manager.cpp  Library.cpp  Library_reader.cpp  Menu.cpp  Menu_manager.cpp  Menu_reader.cpp  Reader.cpp  main.cpp  test.cpp
include/: Book.h  Console.h  Functions.h  History.h  Library.h  Menu.h  Reader.h
src/: Book.cpp  Console.cpp  Functions.cpp  History.cpp  LIbrary_manager.cpp  Library.cpp  Library_reader.cpp  Reader.cpp  main.cpp  test.cpp
web/: app.py  bookls  debug_test.py  historyls
web/data/: borrowReq  managerPasswd  readerls  returnReq
web/templates/: index.html
